# Intrusion-detection

./: .env  .gitignore  .replit  README.md  app.py  lgbm_model.joblib  pyproject.toml  requirements.txt  unknown_threat_model.joblib
.streamlit/: config.toml
assets/: Pasted--div-style-background-color-1E1E1E-padding-15px-border-radius-5px-margin-bottom-20px--1746542832710.txt  unknownThreat_detector.py  user_behavior.py
attached_assets/: Pasted--div-style-background-color-1E1E1E-padding-15px-border-radius-5px-margin-bottom-20px--1746542648486.txt  sample_network_logs (2).csv  unknownThreat_detector.py  user_behavior.py
data/: attack_classification_data.csv  sample_log_entries.txt  sample_log_files.csv  sample_network_logs.csv  sample_user_behavior.csv  sample_user_behavior_anomalies.csv
models/: blockchain.py  isolation_forest_model.py  lgbm_model.py  user_behavior.joblib  user_behavior_model.py
repo-mirror.git/: config  packed-refs
repo-mirror.git.bfg-report/2025-05-21/12-35-48/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
repo-mirror.git/info/: refs
repo-mirror.git/objects/info/: commit-graph  packs
repo-mirror.git/objects/pack/: pack-91ba2cda2f3880b6bdc42b341de8ca28994257f9.bitmap  pack-91ba2cda2f3880b6bdc42b341de8ca28994257f9.idx  pack-91ba2cda2f3880b6bdc42b341de8ca28994257f9.pack  pack-91ba2cda2f3880b6bdc42b341de8ca28994257f9.rev
utils/: chatbot.py  data_loader.py  data_processor.py  db_utils.py  gemini_integration.py  log_parser.py  user_behavior.py  visualization.py
